PBI3 Login and Logout done.
